# qmckl_bench

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.am  README.md  README.org  autogen.sh  configure.ac
data/: Alz_small.h  Alz_small.h5  Sildenafil.h5  h2o-sto3g.h  h2o-sto3g.h5  jast_coef.h
src/: bench_aos.c  bench_aos_acc.c  bench_aos_device.c  bench_aos_device_lib_gpu.c  bench_aos_omp.c  bench_compare_results.c  bench_det.c  bench_jastrow.c  bench_jastrow_acc.c  bench_jastrow_device.c  bench_jastrow_gpu.c  bench_jastrow_omp.c  bench_jastrow_single.c  bench_mos.c  bench_mos_acc.c  bench_mos_device.c  bench_mos_device_lib.c  bench_mos_omp.c  bench_pop.c  bench_prec.c  check_gpu_ao.c  check_gpu_mo.c  overlap_aos.c  overlap_mos.c
