ACLOCAL_AMFLAGS = -I m4
AM_CFLAGS = -I$(srcdir)/data

bin_PROGRAMS = bench_aos bench_aos_device bench_mos bench_mos_device bench_jastrow bench_jastrow_device overlap_mos overlap_aos

bench_aos_SOURCES = src/bench_aos.c
bench_aos_device_SOURCES = src/bench_aos_device.c
bench_mos_SOURCES = src/bench_mos.c
bench_mos_device_SOURCES = src/bench_mos_device.c
bench_jastrow_SOURCES = src/bench_jastrow.c
bench_jastrow_device_SOURCES = src/bench_jastrow_device.c
overlap_mos_SOURCES = src/overlap_mos.c
overlap_aos_SOURCES = src/overlap_aos.c
